cmake_minimum_required(VERSION 3.23.2)

project(
   rEcu_iSolarV06.00.00_GhsMultiV2015p01p07_RH850F1LR7F7010133AFP_vBcRsBpTpms_main_R2024.06.06
   VERSION 0.1
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

add_definitions(
   -g
   -std=c2x
   -Wall
   -Werror
   -Wextra
   -pedantic
   -Wuninitialized
)

add_executable(
   ${PROJECT_NAME}

   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_Controller.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_Init.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_PduMode.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_Prv.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_Rb_Apis.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_ReadNotifStatus.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_RxIndication.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_Transmit.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfCan/EcuabCanIf_TxConfirmation.c
   ${PROJECT_SOURCE_DIR}/source/EcuabIfMem/EcuabIfMem.c
   ${PROJECT_SOURCE_DIR}/source/EcuabTrcvCan/CanTrcv.c
   ${PROJECT_SOURCE_DIR}/source/LibAutosar/LibAutosar_Crc.c
   ${PROJECT_SOURCE_DIR}/source/McalAdc/adc.c
   ${PROJECT_SOURCE_DIR}/source/McalAdc/McalAdc.c
   ${PROJECT_SOURCE_DIR}/source/McalCan/can.c
   ${PROJECT_SOURCE_DIR}/source/McalCan/can.c
   ${PROJECT_SOURCE_DIR}/source/McalCan/rscan.c
   ${PROJECT_SOURCE_DIR}/source/McalDio/gpio.c
   ${PROJECT_SOURCE_DIR}/source/McalDio/McalDio.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/fdl_descriptor.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/Fls.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/Fls_Internal.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/Fls_Irq.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/Fls_Ram.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/Fls_Version.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/r_fdl_hw_access.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/r_fdl_user_if.c
   ${PROJECT_SOURCE_DIR}/source/McalFls/r_fdl_user_if_init.c
   ${PROJECT_SOURCE_DIR}/source/McalGpt/clocks.c
   ${PROJECT_SOURCE_DIR}/source/McalGpt/McalGpt.c
   ${PROJECT_SOURCE_DIR}/source/McalGpt/ostm0.c
   ${PROJECT_SOURCE_DIR}/source/McalGpt/tau.c
   ${PROJECT_SOURCE_DIR}/source/McalLin/McalLin.c
   ${PROJECT_SOURCE_DIR}/source/McalMcu/BrsStartup_c0.c
   ${PROJECT_SOURCE_DIR}/source/McalMcu/McalMcu.c
   ${PROJECT_SOURCE_DIR}/source/McalWdg/McalWdg.c
   ${PROJECT_SOURCE_DIR}/source/McalWdg/wdt.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_CheckEncryptionCompressionMethod.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_ConfirmationRespPend.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCheckCDTCRecord.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCheckRdbiResponseLength.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCheckRoutineControlOptionRecord.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCheckSeed.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCheckWDBIReqLen.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCommControlConditionCheck.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmComModeError.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmConfirmation.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmConfirmation_GeneralReject.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmControlDtcSettingEnableStatus.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmCopyRxData.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmEcuResetPreparation.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetNRCForMinLengthCheck.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetPermissionForMemoryAccess_u8.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetPermTxWarmResp.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetRxPermission.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetSesChgPermission.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetStoreType.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetUpdatedDelayForPowerOn.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmGetUpdatedDelayTime.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmIsComModeDefault.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmMemSizeCheckForTransferData.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmModifyResponse.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmNotification.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmReadDataNRC.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmRxIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmSecaInvalidKey.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmSecaValidKey.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmSecurityLevelLocked.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmStartProtocol.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmStopProtocol.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmSwitchCommunicationControl.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DcmTransferDataCheckPermission.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_GetProgConditions.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_ProcessRequestDownload.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_ProcessRequestTransferExit.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_ReadMemory.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_SetProgConditions.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Dcm_WriteMemory.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_DisableDTCSetting.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Switch_DcmBootLoaderReset.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Switch_DcmExecuteEcuReset.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_Switch_DcmSysSupplierReset.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_UserCommCtrlReEnableModeRuleService.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_UserDIDModeRuleService.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_UserRIDModeRuleService.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_UserServiceModeRuleService.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmAppl_UserSubServiceModeRuleService.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDcm/DcmManager.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDem/DemAppInterface.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDem/DemManager.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplDem/EcuDiag.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplEcuM/SwcApplEcuM.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/Break.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/busmsg.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/calibr.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/CD_DecoderSlim.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/ctrl.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/DevCanHandling.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/eeiface.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/IDOM.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/IDOM_IF.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/multiframe.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/procdat.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/procdat_if.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/REDiag.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/REDiag_if.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/sila.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/statemanager.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/state_bz.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/state_fzz.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/state_zk.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/statistics.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/statistics_if.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_CAN_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_Common.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_DevCanMessages.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_Diag.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_DTC.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_LearnEOL.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat01_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat02_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat03_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat04_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat05_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat06_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_Cat10_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_NvM_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_OSEK_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/SwcApplTpms_Vehstate.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/TmsManager.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/TSSMsg.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/USCS.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/USWarn.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/uswarn_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/USWTime.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WAlloc.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/Walloc_IF.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/watcf.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTAxImb.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTDHW.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTEuF.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTFT.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTHiP.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTHTDR.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTHTVDR.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTLowP.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTPminDR.c
   ${PROJECT_SOURCE_DIR}/source/SwcApplTpms/WTT.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceBswM/BswM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_BusLoadManagement.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ByteCopy.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ByteCopyInit.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_DeInit.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_EnableRxDm.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_Filter.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_GetStatus.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_GetVersionInfo.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_InvalidateShadowSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_InvalidateSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_InvalidateSignalGroup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_IpduGroupStart.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_IpduGroupStop.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_MainFunctionRouteSignals.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_MainFunctionRx.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_MainFunctionTx.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_PackGwMappings.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_PackSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ProcessSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ProcessSignalGroup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ReceiveDynSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ReceiveShadowSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ReceiveSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ReceiveSignalGroup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ReceiveSignalGroupArray.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_RxIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SendDynSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SendIpdu.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SendSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SendSignalGroup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SendSignalGroupArray.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_ShadowBuffToIpduBuff.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_SwitchIpduTxMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_TriggerIPDUSend.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_TriggerTransmit.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_TxChangeMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_TxConfirmation.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_UnpackSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceCom/Com_UpdateShadowSignal.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/CanManager.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_BusSM_ModeIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_CommunicationAllowed.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_Dcm_ActiveDiagnostic.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_Dcm_InactiveDiagnostic.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_DeInit.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_EcuM_WakeupIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_GetCurrentComMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_LChannelMainFunction.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_Main.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/ComM_RequestComMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceComM/SignalCallbacks.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_BootLoader.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_ConfirmRespPend.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_GetKwpTimingValues.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_InternalApi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_PrepareKwpTimingValues.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_RestartP3Timer.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_RestoreSecaTimer.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_SetKwpDefaultTimingValues.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_SetKwpTimingValues.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_SetP3MaxMonitoring.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_SetServiceTable.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_SignalLib.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_DslDsd_WarmStart.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_Main.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmCore_Main_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode1.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode2.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode37A.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode4.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode6.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode8.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspObd_Mode9.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_CC.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Cdi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Cdtcs.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Dddi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Did_Support.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Dsc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Er.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_GetVIN.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Iocbi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Memaddress_Calc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdbi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdpi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_GetFreezeFrameDataByRecord.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepDataRecordByDTC.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepDTCFaultDetectionCounter.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepFailedDTC.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepNumDTCByStatusMask.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_ReportDTCBySevMaskRec.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_ReportDTCSnapshotRecId.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepSeverityOfDTC.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rdtc_RepSuppDTC.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_RequestDownload.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_RequestTransferExit.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_RequestUpload.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Rmba.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Roe.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Seca.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Seca_ChgSecurity.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Seca_RestoreDelayCount.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Seca_SecurityIni.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Tp.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_TransferData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Uds_Did_F186.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Wdbi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/DcmDspUds_Wmba.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsd_Lib.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsd_StateMachine.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_ComMInteraction.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_CopyRxData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_CopyTxData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_Protocol.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_RxIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_Security.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_Session.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_StartOfReception.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_StateMachine.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDcm/Dcm_Dsl_TxResponse.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Clear.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Client.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_ClientClearMachine.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_ClientRequestDispatcher.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_ConsisChk.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Deb.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DebArTime.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DebBase.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DebCtrBaseClass.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Dependencies.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DisturbanceMemory.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DTCFilter.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DTCGroup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DTCs.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_DTCStatusByte.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnableCondition.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvDataElement.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvDid.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvExtendedData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvExtendedDataRec.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvFFRecNumeration.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvFreezeFrame.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EnvMain.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvBuff.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvBuffDistributor.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EventFHandling.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EventRecheck.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Events.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EventStatus.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvMem.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvMemApi.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvMemGen.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_EvtRelatedData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_GenericNvData.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Indicator.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_IndicatorAttributes.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_J1939EnvFreezeFrame.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_KL15Persistence.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Lok_J1939Dcm.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Main.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Mapping.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_Nvm.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_NvmCallbacks.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_OperationCycle.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_PrjChronoSorting.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_PrjDisturbanceMemory.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_PrjEnvDataElement.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_PrjEraseAllNvMDataHandling.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_PrjEvmemProjectExtension.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDem/Dem_StorageCondition.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceDet/Det.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_BootTarget.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_Callout_Stubs.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_MainFunction.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_Prv.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_Shutdown.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_ShutdownServices.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_Startup.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/EcuM_WakeupServices.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/SwcServiceEcuM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM/SysManager.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Dem.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Monitor.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Permission.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Status.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceFiM/FiM_Version.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM_Act.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM_Crc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM_JobProc.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM_Qry.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceNvM/NvM_Queue.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceOs/Os_SwcApplTpms.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_dLoIf.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_EnableDisableRouting.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_Gateway_DDIfTxConf_NoBuf.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_GetConfigurationId.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_Globals.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_InvalidId_If.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_InvalidId_Tp.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_InvalidId_UpTx.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_LoTp.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_Multicast_UpToLo.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_Multicast_UpTx.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_NullFunc_TrigTx.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_UpIf.c
   ${PROJECT_SOURCE_DIR}/source/SwcServicePduR/PduR_UpTp.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSchM/SchM.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_ControllerBusoff.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_ControllerModeIndication.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_GetCurrentComMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_Init.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_InternalStateTransition.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_Main.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_NetworkModes.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_RequestComMode.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_StartWakeupSource.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_StopWakeupSource.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan/CanSM_TxTimeoutException.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceTpCan/CanTp.c
   ${PROJECT_SOURCE_DIR}/source/SwcServiceTpCan/CanTp_Prv.c
)

target_include_directories(
   ${PROJECT_NAME} PUBLIC
   "${PROJECT_SOURCE_DIR}/source/common"
   "${PROJECT_SOURCE_DIR}/source/ProjectMemMap"
   "${PROJECT_SOURCE_DIR}/source/ProjectARA"
   "${PROJECT_SOURCE_DIR}/source/ProjectCfg"
   "${PROJECT_SOURCE_DIR}/source/EcuabIfCan"
   "${PROJECT_SOURCE_DIR}/source/EcuabIfMem"
   "${PROJECT_SOURCE_DIR}/source/EcuabTrcvCan"
   "${PROJECT_SOURCE_DIR}/source/LibAutosar"
   "${PROJECT_SOURCE_DIR}/source/McalAdc"
   "${PROJECT_SOURCE_DIR}/source/McalCan"
   "${PROJECT_SOURCE_DIR}/source/McalDio"
   "${PROJECT_SOURCE_DIR}/source/McalFls"
   "${PROJECT_SOURCE_DIR}/source/McalGpt"
   "${PROJECT_SOURCE_DIR}/source/McalLin"
   "${PROJECT_SOURCE_DIR}/source/McalMcu"
   "${PROJECT_SOURCE_DIR}/source/McalWdg"
   "${PROJECT_SOURCE_DIR}/source/SwcApplDcm"
   "${PROJECT_SOURCE_DIR}/source/SwcApplDem"
   "${PROJECT_SOURCE_DIR}/source/SwcApplEcuM"
   "${PROJECT_SOURCE_DIR}/source/SwcApplTpms"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceBswM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceCom"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceComM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceDcm"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceDem"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceDet"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceEcuM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceFiM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceNvM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceOs"
   "${PROJECT_SOURCE_DIR}/source/SwcServicePduR"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceSchM"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceSmCan"
   "${PROJECT_SOURCE_DIR}/source/SwcServiceTpCan"
)
